# Azoth

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  old  rustfmt.toml
.cargo/: config.toml
.github/workflows/: main.yml  pr-size-gate.yml  typos.yml
crates/: README.md
crates/analysis/: Cargo.toml  README.md
crates/analysis/src/: lib.rs  metrics.rs
crates/api/: Cargo.toml  Dockerfile  README.md
crates/api/src/: main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/commands/: cfg.rs  decode.rs  mod.rs  obfuscate.rs  strip.rs
crates/cli/tests/: e2e_erc20.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: cfg_ir.rs  decoder.rs  detection.rs  encoder.rs  lib.rs  opcode.rs  strip.rs
crates/core/src/cfg_ir/: builder.rs  mod.rs  updates.rs
crates/core/src/detection/: dispatcher.rs  mod.rs  sections.rs
crates/examples/mirage-workflow/src/: main.rs
crates/transforms/: Cargo.toml  README.md
crates/transforms/src/: function_dispatcher.rs  jump_address_transformer.rs  lib.rs  obfuscator.rs  opaque_predicate.rs  pass.rs  shuffle.rs  stack_noise.rs  util.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: errors.rs  lib.rs  seed.rs
crates/verification/: Cargo.toml  README.md
crates/verification/src/: certificate.rs  config.rs  lib.rs  orchestrator.rs
crates/verification/src/formal/: mod.rs  proofs.rs  properties.rs  semantics.rs  smt.rs
crates/verification/src/practical/: mod.rs
examples/: Cargo.toml  README.md  run_escrow.sh  setup.sh  update_contract.sh
examples/contracts/: Escrow.sol
examples/erc20/src/: DemoToken.sol
examples/mirage-workflow/: Cargo.toml  README.md  complete-setup.sh
examples/mirage-workflow/contracts/: MirageEscrow.sol
examples/mirage-workflow/src/: main.rs
examples/src/: main.rs
tests/: Cargo.toml
tests/src/: ethereum.rs  lib.rs  metrics.rs  seed.rs
tests/src/analysis/: metrics.rs  mod.rs
tests/src/core/: cfg_ir.rs  decoder.rs  detection.rs  encoder.rs  mod.rs  strip.rs
tests/src/core/detection/: dispatcher.rs  mod.rs  sections.rs
tests/src/transforms/: function_dispatcher.rs  jump_address.rs  mod.rs  opaque_predicate.rs  shuffle.rs
