[workspace]
members = [
  "crates/analysis",
  "crates/cli",
  "crates/core",
  "crates/transforms", 
  "crates/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"
heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs", package = "heimdall-disassembler", tag = "0.8.8" }
hex = "0.4.3"
serde = "1.0.219"
thiserror = "2.0.12"
clap = { version = "4.5.40", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tempfile = "3.20.0"
tiny-keccak = "2.0.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
petgraph = "0.8.2"
rand = "0.9.1"
anvil = "0.3.1"
ethers = "2.0.14"
anyhow = "1.0.98"

# bytecloak
bytecloak-core = { path = "crates/core" }
bytecloak-cli = { path = "crates/cli" }
bytecloak-analysis = { path = "crates/analysis" }
bytecloak-transform = { path = "crates/transforms" }
bytecloak-utils = { path = "crates/utils" }
