[workspace]
members = [
  "crates/analysis", "crates/api",
  "crates/cli", "crates/core",
  "crates/transforms", 
  "crates/utils", "crates/verification",
  "tests", "examples"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.88"
eot = { version = "0.1.5", features = ["serde", "unified-opcodes"] }
heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs", package = "heimdall-disassembler", tag = "0.8.8" }
hex = "0.4.3"
serde = "1.0.219"
thiserror = "2.0.12"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tempfile = "3.20.0"
tiny-keccak = "2.0.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
petgraph = "0.8.2"
rand = "0.9.1"
anvil = "0.3.1"
ethers = "2.0.14"
anyhow = "1.0.98"
revm = { version = "10", features = ["std", "serde"] }
z3 = { version = "0.12.1" }
bitvec = "1.0.1"
num-bigint = { version = "0.4.6", features = ["serde"] }
indexmap = "2.10.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum-test = "15.0"

# azoth
azoth-core = { path = "crates/core" }
azoth-cli = { path = "crates/cli" }
azoth-analysis = { path = "crates/analysis" }
azoth-transform = { path = "crates/transforms" }
azoth-utils = { path = "crates/utils" }
azoth-verification = { path = "crates/verification" }