[package]
name = "bytecloak-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytecloak-cli = { path = "../cli" }
bytecloak-core = { path = "../core" }
petgraph = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }