[package]
name = "bytecloak-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytecloak-core = { path = "../core" }
bytecloak-utils = { path = "../utils" }
petgraph.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
thiserror.workspace = true