[package]
name = "bytecloak-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
bytecloak-core = { path = "../core" }
bytecloak-transform = { path = "../transforms" }
bytecloak-utils = { path = "../utils" }
tokio.workspace = true
hex.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
petgraph.workspace = true

[dev-dependencies]
axum-test.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"