[package]
name = "bytecloak-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bytecloak"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
bytecloak-core = { path = "../core" }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
