[package]
name = "bytecloak-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bytecloak"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
bytecloak-core = { path = "../core" }
bytecloak-transform = { path = "../transforms" }
bytecloak-utils = { path = "../utils" }
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
thiserror.workspace = true
anvil.workspace = true
ethers.workspace = true
anyhow.workspace = true
