[package]
name = "bytecloak-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hex.workspace = true
heimdall.workspace = true
serde.workspace = true
sha3.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
petgraph.workspace = true
