[package]
name = "bytecloak-transform"
version.workspace = true
edition.workspace = true

[dependencies]
bytecloak-core = { path = "../core" }
bytecloak-analysis = { path = "../analysis" }
rand.workspace = true
serde.workspace = true
sha3.workspace = true
tracing.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
petgraph.workspace = true
tokio.workspace = true
async-trait.workspace = true
